--- a/clone_sale.html
+++ b/clone_sale.html
@@ -570,7 +570,7 @@
           return "http://150.95.26.163:8080/gitmew/php/clone_search.php?cus_id="+cus_id;
         },
         getValue: function(element) {
-          console.log(element);                     
+          //console.log(element);                     
           return element.prod_name;               
         },
         ajaxSettings: {
@@ -739,62 +739,52 @@
     var check = 0;
     function chng_amt(){
       var amt = $('#amount').val();
-      if(array_amt){
-        if(jQuery.inArray(amt, array_amt) != -1){
-          console.log("ye");
-        }
-      }else{
-        console.log("nope");
-      }
-      /*$.ajax({
-        type: "POST",
-        url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
-        data: {'prod_id' : prod_id,
-                'amount' : amt},
-        //async:false,
-        success : function(data){        
-          if(data != "fail"){           
-            $('#price').val(data);
-            $('#total').val($('#price').val()*amt);
-            check = 1;
-          }else{
-            if(old_price != price){
-              $('#price').val(price);
-            }else{
-              $('#price').val(old_price);
-            }          
-            $('#total').val($('#price').val()*amt);
-            check = 0;
+      var price_thre = -1;
+      if(array_amt){       
+        for(var i = 0;i < array_amt.length;i++){          
+          if(amt >= parseInt(array_amt[i].amt_threshold)){           
+            price_thre = array_amt[i].prod_price;         
           }
         }
-      });*/
+      }
+      if(price_thre != -1){
+        $('#price').val(price_thre);
+        $('#total').val($('#price').val()*amt);
+        check = 1;
+      }else{
+        if(old_price != price){
+          $('#price').val(price);
+        }else{
+          $('#price').val(old_price);
+        }          
+        $('#total').val($('#price').val()*amt);
+        check = 0;
+      }     
     }
 
     function chng_amt_edit(arg){
       var amt = $('#amount-'+arg).val();
-      var prod = jsonObj[arg-1].prod_id;     
-      $.ajax({
-        type: "POST",
-        url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
-        data: {'prod_id' : prod,
-                'amount' : amt},
-        //async:false,
-        success : function(data){
-          if(data != "fail"){           
-            $('#price-'+arg).val(data);
-            $('#total-'+arg).val($('#price-'+arg).val()*amt);
-            jsonObj[arg-1].check_amt = 1;          
-          }else{
-            if(jsonObj[arg-1].price_old != jsonObj[arg-1].price_cus){
-              $('#price-'+arg).val(jsonObj[arg-1].price_cus);
-            }else{
-              $('#price-'+arg).val(jsonObj[arg-1].price_old);
-            }          
-            $('#total-'+arg).val($('#price-'+arg).val()*amt);
-            jsonObj[arg-1].check_amt = 0; 
+      var price_thre = -1;
+      if(jsonObj[arg-1].arr){       
+        for(var i = 0;i < jsonObj[arg-1].arr.length;i++){          
+          if(amt >= parseInt(jsonObj[arg-1].arr[i].amt_threshold)){           
+            price_thre = jsonObj[arg-1].arr[i].prod_price;         
           }
         }
-      });
+      }
+      if(price_thre != -1){
+        $('#price-'+arg).val(price_thre);
+        $('#total-'+arg).val($('#price-'+arg).val()*amt);
+        jsonObj[arg-1].check_amt = 1;      
+      }else{
+        if(jsonObj[arg-1].price_old != jsonObj[arg-1].price_cus){
+          $('#price-'+arg).val(jsonObj[arg-1].price_cus);
+        }else{
+          $('#price-'+arg).val(jsonObj[arg-1].price_old);
+        }          
+        $('#total-'+arg).val($('#price-'+arg).val()*amt);
+        jsonObj[arg-1].check_amt = 0; 
+      }     
     }
 
     function chng_discount(){   
@@ -907,7 +897,7 @@
                   <input id='price-"+index+"' class='form-control text-center' value='"+ $('#price').val() +"' readonly>\
                 </div>\
                 <div class='col-1' style='padding-left: 10px; padding-right: 0px;'>\
-                  <input id='amount-"+index+"' oninput='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
+                  <input id='amount-"+index+"' type='number' oninput='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
                 </div>\
                 <div class='col-1'>\
                   <input id='unit-"+index+"' class='form-control text-center' value='"+ $('#unit').val() +"' readonly>\
@@ -953,6 +943,7 @@
             item ["total"] =  $('#total').val();
             item ["price_old"] =  old_price;
             item["price_cus"] = price;
+            item["arr"] = array_amt;
             item ["check_amt"] =  check;
             if($('#prod-discount').val() != ""){
               item ["discount"] =  $('#prod-discount').val();
