--- a/sale.html
+++ b/sale.html
@@ -516,6 +516,7 @@
     var img;
     var prod_id;
     var old_price,price;
+    array_amt = [];
     $(document).ready(function(){  
       /*if(!localStorage.user_id){
         $.alert({
@@ -607,7 +608,8 @@
               var unit_name = $("#name").getSelectedItemData().unit_name;
               prod_id = $("#name").getSelectedItemData().prod_id;
               img = $("#name").getSelectedItemData().img_string;
-              old_price = $("#name").getSelectedItemData()[7].old_price;                     
+              old_price = $("#name").getSelectedItemData()[7].old_price;   
+              array_amt = $("#name").getSelectedItemData()[8];                    
 
               $('#barcode').val(barcode);
               $('#price').val(price);
@@ -745,55 +747,52 @@
     var check = 0;
     function chng_amt(){
       var amt = $('#amount').val();
-      $.ajax({
-        type: "POST",
-        url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
-        data: {'prod_id' : prod_id,
-                'amount' : amt},
-        //async:false,
-        success : function(data){        
-          if(data != "fail"){           
-            $('#price').val(data);
-            $('#total').val($('#price').val()*amt);
-            check = 1;
-          }else{
-            if(old_price != price){
-              $('#price').val(price);
-            }else{
-              $('#price').val(old_price);
-            }          
-            $('#total').val($('#price').val()*amt);
-            check = 0;
+      var price_thre = -1;
+      if(array_amt){       
+        for(var i = 0;i < array_amt.length;i++){          
+          if(amt >= parseInt(array_amt[i].amt_threshold)){           
+            price_thre = array_amt[i].prod_price;         
           }
         }
-      });
+      }
+      if(price_thre != -1){
+        $('#price').val(price_thre);
+        $('#total').val($('#price').val()*amt);
+        check = 1;
+      }else{
+        if(old_price != price){
+          $('#price').val(price);
+        }else{
+          $('#price').val(old_price);
+        }          
+        $('#total').val($('#price').val()*amt);
+        check = 0;
+      }     
     }
 
     function chng_amt_edit(arg){
       var amt = $('#amount-'+arg).val();
-      var prod = jsonObj[arg-1].prod_id;     
-      $.ajax({
-        type: "POST",
-        url: "http://150.95.26.163:8080/gitmew/php/get_amt_price.php",
-        data: {'prod_id' : prod,
-                'amount' : amt},
-        //async:false,
-        success : function(data){
-          if(data != "fail"){           
-            $('#price-'+arg).val(data);
-            $('#total-'+arg).val($('#price-'+arg).val()*amt);
-            jsonObj[arg-1].check_amt = 1;          
-          }else{
-            if(jsonObj[arg-1].price_old != jsonObj[arg-1].price_cus){
-              $('#price-'+arg).val(jsonObj[arg-1].price_cus);
-            }else{
-              $('#price-'+arg).val(jsonObj[arg-1].price_old);
-            }          
-            $('#total-'+arg).val($('#price-'+arg).val()*amt);
-            jsonObj[arg-1].check_amt = 0; 
+      var price_thre = -1;
+      if(jsonObj[arg-1].arr){       
+        for(var i = 0;i < jsonObj[arg-1].arr.length;i++){          
+          if(amt >= parseInt(jsonObj[arg-1].arr[i].amt_threshold)){           
+            price_thre = jsonObj[arg-1].arr[i].prod_price;         
           }
         }
-      });
+      }
+      if(price_thre != -1){
+        $('#price-'+arg).val(price_thre);
+        $('#total-'+arg).val($('#price-'+arg).val()*amt);
+        jsonObj[arg-1].check_amt = 1;      
+      }else{
+        if(jsonObj[arg-1].price_old != jsonObj[arg-1].price_cus){
+          $('#price-'+arg).val(jsonObj[arg-1].price_cus);
+        }else{
+          $('#price-'+arg).val(jsonObj[arg-1].price_old);
+        }          
+        $('#total-'+arg).val($('#price-'+arg).val()*amt);
+        jsonObj[arg-1].check_amt = 0; 
+      }     
     }
 
     function chng_discount(){   
@@ -906,7 +905,7 @@
                   <input id='price-"+index+"' class='form-control text-center' value='"+ $('#price').val() +"' readonly>\
                 </div>\
                 <div class='col-1' style='padding-left: 10px; padding-right: 0px;'>\
-                  <input id='amount-"+index+"' oninput='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
+                  <input id='amount-"+index+"' type='number' oninput='chng_amt_edit("+index+")' class='form-control text-center no-spin' min='1' value='"+ $('#amount').val() +"' readonly>\
                 </div>\
                 <div class='col-1'>\
                   <input id='unit-"+index+"' class='form-control text-center' value='"+ $('#unit').val() +"' readonly>\
@@ -952,6 +951,7 @@
             item ["total"] =  $('#total').val();
             item ["price_old"] =  old_price;
             item["price_cus"] = price;
+            item["arr"] = array_amt;
             item ["check_amt"] =  check;
             if($('#prod-discount').val() != ""){
               item ["discount"] =  $('#prod-discount').val();
