--- a/sale.html
+++ b/sale.html
@@ -1266,6 +1266,12 @@ WinPrint.document.write("<!DOCTYPE html>"+
                   $('#cus').val("");                  
                   detail();*/
                   location.reload();
+                }else{
+                  $.alert({
+                    icon: 'fa fa-warning',
+                    title: 'เตือน',
+                    content: "ลองอีกครั้ง"
+                  });   
                 }
             }
         });
