--- a/manage_bill.html
+++ b/manage_bill.html
@@ -930,7 +930,7 @@
                             <button data-toggle="datepicker" type="button" class="btn btn-default docs-datepicker-trigger" style="margin-right: 5px;" disabled>
                                 <i class="fa fa-calendar" aria-hidden="true"></i>
                             </button>
-                            <input id="dpicker" data-toggle="datepicker" type="text" class="form-control docs-date text-center" name="date" placeholder="วันที่ต้องการค้นหา">
+                            <input id="dpicker" data-toggle="datepicker" type="text" class="form-control docs-date text-center" name="date" placeholder="วันที่ต้องการค้นหา" readonly>
                         </div>
                     </div>
                     <!-- End Date Picker -->
