--- a/sale.html
+++ b/sale.html
@@ -1111,7 +1111,7 @@
         + final_price + "&comment=" + comment + "&name_cus=" + cus_name + "&user_id=" + localStorage.user_id;
         
         if(print == "print"){
-          var WinPrint  = window.open();
+          var WinPrint  = window.open('', '', 'left=0,top=0,width=1300,height=600,toolbar=0,scrollbars=0,status=0');
         }
         $.ajax({
             type: "POST",
@@ -1167,14 +1167,14 @@ WinPrint.document.write("<!DOCTYPE html>"+
 "<html>"+
 "<head>"+
 "<meta charset='utf-8'>"+
-  "<link href='https://fonts.googleapis.com/css?family=Maitree' rel='stylesheet'>"+
+  "<link href='"+link+"' rel='stylesheet'>"+
   "<style>@page {size: auto; margin: 0;} .fl{float: left; text-align: center; margin-left: 50mm; margin-right: 40mm;}.fr{float: right; text-align: left; margin-right: 25mm;}.fc{float: center; text-align: center;}.fs-200-bold{font-size: 200%; margin-bottom: -10px; font-weight: bold;}.fs-200{font-size: 200%; margin-bottom: -25px;}.fs-180{font-size: 180%; margin-bottom: -25px; letter-spacing: 2px;}.fs-150-title{font-size: 150%; margin-bottom: -25px; letter-spacing: 1px;}.fs-150{font-size: 150%; margin-bottom: -15px; letter-spacing: 1px;}.fs-120{font-size: 120%; letter-spacing: 1px;}.fl-spc{float: left; width: 5%;}.fl-10{float: left; width: 10%;}.fl-15{float: left; width: 15%;}.fl-20{float: left; width: 20%; text-align: center;}.fl-25{float: left; width: 25%; text-align: center;}.fl-30{float: left; width: 30%; text-align: center;}.fl-35{float: left; width: 30%; text-align: center;}.fl-40{float: left; width: 40%; text-align: center;}.fl-50{float: left; width: 50%; text-align: center;}.fl-55{float: left; width: 55%; text-align: center;}.fl-87{float: left; width: 87.5%; text-align: center;}.field{border-bottom: 1px dashed black;}.ctn{position: relative; width: 297mm; height: 210mm; padding: 10mm 15mm 15mm 10mm; font-family: 'Maitree';}.row{display: inline-block;}.tb-st{border: 1px solid black; text-align: center; padding: 3px;}.tb{border: 1px solid black; text-align: center; padding: 3px; border-left: none;}.no-bdt{border-top: none;}</style>"+
 "</head>"+
 "<body>"+
 "<div class='ctn'>"+
   "<div class='row'>"+
     "<div class='fl'>"+
-      "<img style='width: 250px; height: 150px;' src="+logo+">"+
+      "<img style='width: 250px; height: 150px;' src='"+logo+"'>"+
     "</div>"+ 
     "<div class='fr'>"+
       "<p class='fs-200'>พรประสิทธิ์ PPS Auto Shop</p>"+
@@ -1271,6 +1271,9 @@ WinPrint.document.write("<!DOCTYPE html>"+
           title: 'เตือน',
           content: "กรุณากรอกข้อมูลให้ครบถ้วนก่อนทำรายการ"
         });     
+      }
+      if(a4 == true){
+
       }
     }
 
