--- a/clone_import.html
+++ b/clone_import.html
@@ -77,6 +77,7 @@
     <script>
       var sup_id = 0;
       var prod_id,img;
+      var cus_id = -1;
       $(document).ready(function(){   
         if(!localStorage.user_id){
           $.alert({
@@ -260,8 +261,7 @@
           theme: "blue-light",
         };
 
-        $("#sup").easyAutocomplete(options_sup);   
-
+        $("#sup").easyAutocomplete(options_sup);
         
         var options_cus = {
 
@@ -280,6 +280,7 @@
           },
 
           preparePostData: function(data) {
+            cus_id = -1;
             data.phrase = $("#input-cus").val();
             return data;
           },
@@ -297,7 +298,7 @@
               },
 
               onChooseEvent: function() {
-                //cus_id = $("#input-cus").getSelectedItemData().customer_id;
+                cus_id = $("#input-cus").getSelectedItemData().customer_id;
               }
           },      
           requestDelay: 300,
@@ -496,6 +497,9 @@
       function checkrow_unit(arg) {
         var unit = $("#set-unit-"+arg).val();
         var price = $("#set-unit-price-"+arg).val();
+        if(unit == ""  && price == ""){
+            return 0;
+        }
 
         for(var i = 1; i <= c_unit; i++){
           if(unit == $("#show-unit-"+i).text()){
@@ -521,14 +525,22 @@
       var c_cus = 0;
       var start_cus = 0;  
       function add_cus() {
-          if($("#input-cus").val() == "" || $("#input-cus-price").val() == ""){
+        if($("#input-cus").val() == "" || $("#input-cus-price").val() == ""){
             $.alert({
-              icon: 'fa fa-warning',
-              title: 'เตือน',
-              content: "กรุณากรอกข้อมูลให้ครบถ้วน",
+                icon: 'fa fa-warning',
+                title: 'เตือน',
+                content: "กรุณากรอกข้อมูลให้ครบถ้วน",
             });
             return 0;
-          }
+        }
+        if(cus_id == -1){
+            $.alert({
+                icon: 'fa fa-warning',
+                title: 'เตือน',
+                content: "กรุณากรอกชื่อที่ถูกต้อง",
+            });
+            return 0;  
+        }
 
         var exist = false;
         for (var i = 1; i <= c_cus; i++) {
@@ -557,6 +569,7 @@
           }
 
           var text_html = "<div id='show-seted-cus-" + c_cus + "' class='row'>" +
+            "<span id='span-cus-"+c_cus+"' hidden>"+cus_id+"</span>" +
             "<div class='col-3'></div>" +
             "<div id='show-cus-" + c_cus + "' class='col-3 text-center' ondblclick='setCus(" + c_cus + ");'></div>" +
             "<div id='show-cus-price-" + c_cus + "' class='col-2 text-center' ondblclick='setCusPrice(" + c_cus + ");'></div>" +
@@ -601,6 +614,7 @@
           },
 
           preparePostData: function(data) {
+            $("#span-cus-"+arg).text("-1");
             data.phrase = $("#set-cus-"+arg).val();
             return data;
           },
@@ -618,7 +632,7 @@
               },
 
               onChooseEvent: function() {
-                //cus_id = $("#set-cus-"+arg).getSelectedItemData().customer_id;
+                $("#span-cus-"+arg).text($("#set-cus-"+arg).getSelectedItemData().customer_id);
               }
           },      
           requestDelay: 300,
@@ -661,9 +675,22 @@
         });
       }
 
-      function checkrow_cus(arg) {
+      function checkrow_cus(arg) {       
         var cus = $("#set-cus-"+arg).val();
         var price = $("#set-cus-price-"+arg).val();
+
+        if(cus == "" && price == ""){
+            return 0;
+        }
+
+        if($("#span-cus-"+arg).text() == "-1"){
+            $.alert({
+                icon: 'fa fa-warning',
+                title: 'เตือน',
+                content: "กรุณากรอกชื่อที่ถูกต้อง",
+            });
+            return 0;  
+        }
 
         for(var i = 1; i <= c_cus; i++){
           if(cus == $("#show-cus-"+i).text()){
@@ -735,9 +762,11 @@
           /*********** Cus ************/         
           var cus = [];
           var cus_price = [];
+          var cus_name = [];
 
           for(var l = start_cus; l <= c_cus; l++){
-          cus.push($("#show-cus-"+l).text());
+          cus.push($("#span-cus-"+l).text());
+          cus_name.push($("#show-cus-"+l).text());
           cus_price.push($("#show-cus-price-"+l).text());         
           }
           $("#show-cus-container").empty();
@@ -813,6 +842,7 @@
           loop = unit.length;
           diff = unit.length - cus.length;
           for(i = 0; i < diff; i++){
+            cus_name.push("-");
             cus.push("-");
             cus_price.push("-");
           }
@@ -865,7 +895,7 @@
                               "<div class='col-2'></div>"+
                               "<div class='col-2'>"+unit[c]+"</div>"+
                               "<div class='col-2'>"+unit_price[c]+"</div>"+
-                              "<div class='col-2'>"+cus[c]+"</div>"+
+                              "<div class='col-2'>"+cus_name[c]+"</div>"+
                               "<div class='col-2'>"+cus_price[c]+"</div>"+
                               "<div class='col-2'></div>"+
                             "</div>");
@@ -874,7 +904,7 @@
                               "<div class='col-2'></div>"+
                               "<div class='col-2'>"+unit[c]+"</div>"+
                               "<div class='col-2'>"+unit_price[c]+"</div>"+
-                              "<div class='col-2'>"+cus[c]+"</div>"+
+                              "<div class='col-2'>"+cus_name[c]+"</div>"+
                               "<div class='col-2'>"+cus_price[c]+"</div>"+
                               "<div class='col-2'></div>"+
                             "</div>");
@@ -1028,30 +1058,19 @@
           var sup_name = $('#sup').val();  
           var dataString =  "JSON=" + data_str + "&b_id=" + b_id + "&date=" + datetime + "&sup_id=" + sup_id
           + "&sup_name=" + sup_name + "&user_id=" + localStorage.user_id;
-          //console.log(dataString);
+          console.log(dataString);
           $.ajax({
               type: "POST",
-              url:"http://150.95.26.163:8080/gitmew/php/stock_in.php",
+              url:"http://150.95.26.163:8080/gitmew/php/clone_stock_in.php",
               data: dataString,                                     
-              success: function(data){
-                  $.alert({
-                  icon: 'fa fa-badge-check',
-                  title: 'สำเร็จ',
-                  content: "บันทึกสำเร็จ!",
-                });
-                  if(data == "success"){                
-                    /*$('#show_list_add').empty();
-                    obj = [];                
-                    count = 0
-                    c_cus = 0;
-                    c_unit = 0;
-                    start_cus = 0;
-                    start_unit = 0;
-                    sup_id = 0;                                                       
-                
-                    $('#sup').val("");
-                    detail();*/
-                    location.reload();
+              success: function(data){                 
+                  if(data == "success"){ 
+                    $.alert({
+                        icon: 'fa fa-badge-check',
+                        title: 'สำเร็จ',
+                        content: "บันทึกสำเร็จ!",
+                    });              
+                    location.reload(true);
                   }
               }
           });       
