--- a/manage_prod.html
+++ b/manage_prod.html
@@ -1124,8 +1124,10 @@
             //console.log(data);
             $("#show-amt-container").empty();     
             $("#show-cus-container").empty(); 
-            c_cus = 0;   
+            c_cus = 0;
+            start_cus = 0;   
             c_unit = 0; 
+            start_unit = 0;
             unit_get = [];
             cus_get = [];   
             $(".file-upload").removeClass('active');
