--- a/clone_sale.html
+++ b/clone_sale.html
@@ -515,8 +515,7 @@
     var cus_id = -1;
     var img;
     var prod_id = 0;
-    var old_price,price,cus_id_st;
-    var cus_text = "";
+    var old_price,price;   
     array_amt = [];
     $(document).ready(function(){  
       if(!localStorage.user_id){
