--- a/sale.html
+++ b/sale.html
@@ -514,7 +514,7 @@
     var sum_dis = 0;
     var cus_id = -1;
     var img;
-    var prod_id;
+    var prod_id = 0;
     var old_price,price;
     array_amt = [];
     $(document).ready(function(){  
@@ -547,7 +547,16 @@
           if (objEvent.keyCode == 13) {  //enter pressed
               objEvent.preventDefault();           
               var $this = $(objEvent.target);
-              var i_enter = parseFloat($this.attr('data-index'));                    
+              var i_enter = parseFloat($this.attr('data-index'));         
+              if(i_enter == 2 && prod_id == 0){
+                $.alert({
+                  icon: 'fa fa-warning',
+                  title: 'เตือน',
+                  content: "กรุณากรอกชื่อสินค้าที่ถูกต้อง"
+                });   
+                reset();
+                i_enter = 1;             
+              }                    
               if(i_enter == 4){
                 add();
               }else if(i_enter == 6 && modal){
@@ -592,6 +601,7 @@
             $("#name").val("");
             return 0;
           }else{
+            prod_id = 0;
             data.phrase = $("#name").val();
             return data;
           }
@@ -607,7 +617,7 @@
                 type: "slide",
                 time: 100
             },
-            onChooseEvent: function() {
+            onSelectItemEvent: function() {                
               var barcode = $("#name").getSelectedItemData().barcode;
               price = $("#name").getSelectedItemData().prod_price;
               var unit_name = $("#name").getSelectedItemData().unit_name;
@@ -620,7 +630,21 @@
               $('#price').val(price);
               $('#unit').val(unit_name);
               $('#total').val(price);
-            }
+            },
+            /*onChooseEvent: function() {
+              var barcode = $("#name").getSelectedItemData().barcode;
+              price = $("#name").getSelectedItemData().prod_price;
+              var unit_name = $("#name").getSelectedItemData().unit_name;
+              prod_id = $("#name").getSelectedItemData().prod_id;
+              img = $("#name").getSelectedItemData().img_string;
+              old_price = $("#name").getSelectedItemData()[7].old_price;   
+              array_amt = $("#name").getSelectedItemData()[8];                    
+
+              $('#barcode').val(barcode);
+              $('#price').val(price);
+              $('#unit').val(unit_name);
+              $('#total').val(price);
+            }*/
         },     
         requestDelay: 300,
         theme: "blue-light",         
@@ -645,6 +669,7 @@
           },
 
           preparePostData: function(data) {
+            cus_id = -1;
             data.phrase = $("#cus").val();
             return data;
           },
@@ -660,7 +685,10 @@
                   type: "slide",
                   time: 100
               },
-
+              onSelectItemEvent: function() {                
+                cus_id = $("#cus").getSelectedItemData().customer_id;
+                console.log(cus_id);
+              },
               onChooseEvent: function() {
                 cus_id = $("#cus").getSelectedItemData().customer_id;
                 if(jsonObj.length > 0 || $('#barcode').val != ""){
