--- a/clone_import.html
+++ b/clone_import.html
@@ -992,6 +992,7 @@
                   $("#amount-" + i).prop('id', 'amount-' + (i - 1));
                   $("#fund-" + i).prop('id', 'fund-' + (i - 1));
                   $("#price-" + i).prop('id', 'price-' + (i - 1));
+                  $("#net-" + i).prop('id', 'net-' + (i - 1));
                   $("#item-" + i).prop('id', 'item-' + (i - 1));
                   $("#btn-delete-" + i).attr('onclick', "added_delete(" + (i - 1) + ")");
                   $("#btn-delete-" + i).prop('id', 'btn-delete-' + (i - 1));
