--- a/clone_import.html
+++ b/clone_import.html
@@ -78,6 +78,7 @@
       var sup_id = 0;
       var prod_id = 0,img;
       var cus_id = -1;
+      var trans_id = 0;
       $(document).ready(function(){   
         if(!localStorage.user_id){
           $.alert({
@@ -272,6 +273,52 @@
         };
 
         $("#sup").easyAutocomplete(options_sup);
+
+        var options_trans = {
+
+          url: function(phrase) {
+            return "http://150.95.26.163:8080/gitmew/php/search_trans.php";
+          },
+
+          getValue: function(element) {           
+            return element.transport_name;
+          },
+
+          ajaxSettings: {
+            method: "POST",
+            data: {}
+          },
+
+          preparePostData: function(data) {
+            trans_id = 0;
+            data.phrase = $("#ship-by").val();
+            return data;
+          },
+          minCharNumber: 2,
+          list: {
+              maxNumberOfElements: 100,
+
+              showAnimation: {
+                  type: "slide",
+                  time: 100
+              },
+              hideAnimation: {
+                  type: "slide",
+                  time: 100
+              },
+              onSelectItemEvent: function() {                
+                trans_id = $("#ship-by").getSelectedItemData().transport_id;
+                console.log(trans_id);
+              },
+              onChooseEvent: function() {
+                trans_id = $("#ship-by").getSelectedItemData().transport_id;                
+              }
+          },
+          requestDelay: 300,  
+          theme: "blue-light",          
+          };
+
+        $("#ship-by").easyAutocomplete(options_trans);
         
         var options_cus = {
 
@@ -1093,13 +1140,17 @@
       }
 
       function save(){      
-        if(obj.length > 0 && $('#sup').val() != ""){
+        if(obj.length > 0 && $('#sup').val() != "" && $('#total-ship').val() != "" && $('#ship-by').val() != ""){
           //console.log(obj);
           var data_str = JSON.stringify(obj);         
           var b_id = $('#branch option:selected').val(); 
           var sup_name = $('#sup').val();  
+          var total_ship = $('#total-ship').val();
+          var ship = $('#ship-by').val();
+          var total = $('#total-price').val()
           var dataString =  "JSON=" + data_str + "&b_id=" + b_id + "&date=" + datetime + "&sup_id=" + sup_id
-          + "&sup_name=" + sup_name + "&user_id=" + localStorage.user_id;
+          + "&sup_name=" + sup_name + "&user_id=" + localStorage.user_id + "&total=" + total 
+          + "&total_ship=" + total_ship + "&ship=" + trans_id + "&trans_name=" + ship;
           console.log(dataString);
           $.ajax({
               type: "POST",
@@ -1117,12 +1168,11 @@
               }
           });       
           
-        }else{
-          //alert("กรุณาเลือกผู้ผลิตก่อนบันทึก");
+        }else{          
           $.alert({
             icon: 'fa fa-warning',
             title: 'เตือน',
-            content: "กรุณาเลือกผู้ผลิตก่อนบันทึก!",
+            content: "กรุณาเลือกผู้ผลิตก่อนบันทึกหรือกรอกข้อมูลให้ครบถ้วน!",
           });      
         }
       }
