--- a/clone_import.html
+++ b/clone_import.html
@@ -1219,9 +1219,7 @@
           <div class="row">
             <div class="col-2"></div>
             <div id="date" class="col-2 text-left text-muted"></div>
-            <div class="col-1"></div>
-            <div class="col-3 text-muted" >ส่งโดย : <div id="sender" class="btn-group col-4 text-center text-muted">
-              someone123123123</div></div>
+            <div class="col-4"></div>
             <div class="col-3 text-left text-muted">ผู้ทำรายการ :
               <div id="user" class="btn-group col-4 text-center text-muted">
               </div>
@@ -1230,12 +1228,16 @@
           <br>
           <div class="row">
             <div class="col-2"></div>
-            <div class="col-5 text-left text-muted">จากผู้ผลิต :
-              <div class="btn-group col-4 text-center text-muted">
-                <input id="sup" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ผลิตที่นี่" data-index="1">
+            <div class="col-3 text-left text-muted">จากผู้ผลิต :
+              <div class="btn-group col-6 text-center text-muted">
+                <input id="sup" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ผลิต" data-index="1">
               </div>
             </div>
-            <div class="col-1"></div>
+            <div class="col-3 text-left text-muted">ผู้ส่ง :
+              <div class="btn-group col-6 text-center text-muted">
+                <input id="sup" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ส่ง" data-index="1">
+              </div>
+            </div>
             <div class="col-4 text-left text-muted dropdown">นำของเข้า :
               <div class="btn-group">
                 <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
