--- a/bill_info.html
+++ b/bill_info.html
@@ -55,14 +55,14 @@
         var order_id,branch_id;
         var count;
         $(document).ready(function () {
-            /*if(!localStorage.user_id){
+            if(!localStorage.user_id){
                 $.alert({
                 icon: 'fa fa-warning',
                 title: 'เตือน',
                 content: "กรุณาเข้าสู่ระบบก่อน"
                 });
                 window.location = "login.html";
-            }   */
+            }
             url = new URL(window.location.href);
             order_id = url.searchParams.get("order"); 
 
